--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 
 
 	<properties>
+                 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<license.plugin.version>1.9.0</license.plugin.version>
 	</properties>
 
