NICS7 Merged Code Initial Commit

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2008-2016, Massachusetts Institute of Technology (MIT)
+    Copyright (c) 2008-2015, Massachusetts Institute of Technology (MIT)
     All rights reserved.
 
     Redistribution and use in source and binary forms, with or without
@@ -30,6 +30,9 @@
     OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 -->
+<!-- (c) Copyright, 2008-2014 Massachusetts Institute of Technology. This 
+	material may be reproduced by or for the U.S. Government pursuant to the 
+	copyright license under the clause at DFARS 252.227-7013 (June, 1995). -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
@@ -38,7 +41,7 @@
 	<!-- Maven artifact details -->
 	<groupId>edu.mit.ll.nics.db</groupId>
 	<artifactId>nics-db</artifactId>
-	<version>6.3</version>
+	<version>6.1.1</version>
 	<packaging>pom</packaging>
 
 	<!-- Project information -->
@@ -65,7 +68,7 @@
                         <header>${basedir}/copyright.txt</header>
                         <strictCheck>true</strictCheck>
                         <properties>
-                            <year>2016</year>
+                            <year>2015</year>
                         </properties>
                         <useDefaultExcludes>false</useDefaultExcludes>
 
